--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+v0.4.0
+------
++ Implemented e-mail domains restrictions.
++ Implemented optional user account activation.
+
+
 v0.3.0
 ------
 + Added registration with invite code.
