--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v0.5.0
+------
++ Implemented sign in and sign up availability toggle.
+
+
 v0.4.0
 ------
 + Implemented e-mail domains restrictions.
