AUTHORS is updated.

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,4 +15,4 @@ Translators
 -----------
 
 Russian: Igor Starikov <https://www.transifex.com/accounts/profile/idlesign/>
-
+Polish: Alexey Subbotin <https://www.transifex.com/accounts/profile/dotsbb/>
