--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
-v0.6
-----
+v0.6.1
+------
+* Fixed the issue with upper cased blacklisted emails.
+* Fixed blacklisted domains detection mechanics.
+* Fixed Bootstrap 3 sign in template.
+* Fixed @redirect_signedin raising AttributeError (closes #7).
+
+
+v0.6.0
+------
 + Added Bootstrap 3 templates.
 + Added Polish localization (see #4).
 + Added support for Py2.6 (see #4).
