--- a/sitegate/locale/ru/LC_MESSAGES/django.po
+++ b/sitegate/locale/ru/LC_MESSAGES/django.po
@@ -1,76 +1,97 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
-# Igor Starikov <idlesign@yandex.ru>, 2013
+# Igor Starikov <idlesign@yandex.ru>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: django-sitegate\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-08-08 20:56+0700\n"
-"PO-Revision-Date: 2013-08-08 14:08+0000\n"
-"Last-Translator: Igor Starikov <idlesign@yandex.ru>\n"
-"Language-Team: Russian (http://www.transifex.com/projects/p/django-sitegate/language/ru/)\n"
+"POT-Creation-Date: 2014-07-31 20:57+0700\n"
+"PO-Revision-Date: 2014-07-31 21:01+0700\n"
+"Last-Translator: Igor 'idle sign' Starikov <idlesign@yandex.ru>\n"
+"Language-Team: Russian (http://www.transifex.com/projects/p/django-sitegate/"
+"language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 1.5.4\n"
 
-#: models.py:16
+#: models.py:18
 msgid "Domain name"
 msgstr "Доменное имя"
 
-#: models.py:17
+#: models.py:19
 msgid "Enabled"
 msgstr "Использовать"
 
-#: models.py:17
+#: models.py:19
 msgid ""
-"If enabled visitors won't be able to sign up with this domain name in "
-"e-mail."
-msgstr "Если флаг установлен, посетители в чьих адресах электронной почты будет упомянут этот домен, не смогут зарегистрироваться."
+"If enabled visitors won't be able to sign up with this domain name in e-mail."
+msgstr ""
+"Если флаг установлен, посетители в чьих адресах электронной почты будет "
+"упомянут этот домен, не смогут зарегистрироваться."
 
-#: models.py:20
+#: models.py:22
 msgid "Blacklisted domain"
 msgstr "Домен в чёрном списке"
 
-#: models.py:21
+#: models.py:23
 msgid "Blacklisted domains"
 msgstr "Домены в чёрном списке"
 
-#: models.py:35 models.py:43 signup_flows/modern.py:49
-msgid "Invitation code"
-msgstr "Код приглашения"
-
-#: models.py:36
+#: models.py:44
 msgid "Date created"
 msgstr "Дата создания"
 
-#: models.py:37
+#: models.py:45
 msgid "Date accepted"
 msgstr "Дата активации"
 
-#: models.py:38
-msgid "Creator"
-msgstr "Создатель"
-
-#: models.py:39
-msgid "Acceptor"
-msgstr "Получивший"
-
-#: models.py:40
+#: models.py:46
 msgid "Expired"
 msgstr "Истёк"
 
-#: models.py:40
+#: models.py:82 models.py:89 signup_flows/modern.py:49
+msgid "Invitation code"
+msgstr "Код приглашения"
+
+#: models.py:83
 msgid "Visitors won't be able to sign up with an expired code."
 msgstr "Посетители не могут регистрироваться, используя истёкший код."
 
-#: models.py:44
+#: models.py:85
+msgid "Creator"
+msgstr "Создатель"
+
+#: models.py:86
+msgid "Acceptor"
+msgstr "Получивший"
+
+#: models.py:90
 msgid "Invitation codes"
 msgstr "Коды приглашений"
+
+#: models.py:106 models.py:112
+msgid "Activation code"
+msgstr "Код активации"
+
+#: models.py:107
+msgid "Expired codes couldn't be used for repeated account activations."
+msgstr ""
+"Просроченные коды не могут быть использованы для активации учётных записей."
+
+#: models.py:109
+msgid "User"
+msgstr ""
+
+#: models.py:113
+msgid "Activation codes"
+msgstr "Коды активации"
 
 #: settings.py:6
 msgid "Sign in is disabled."
@@ -80,35 +101,128 @@ msgstr "Возможность авторизации отключена."
 msgid "Sign up is disabled."
 msgstr "Возможность регистрации отключена."
 
+#: settings.py:11
+msgid ""
+"Congratulations! You're almost done with the registration. Please check your "
+"mailbox for a message containing an account activation link."
+msgstr ""
+"Поздравляем! Процесс регистрации практически завершён. Письмо со ссылкой для "
+"активации вашей учетной записи отправлено на ваш почтовый ящик."
+
+#: settings.py:13
+msgid "Account activation"
+msgstr "Активация учётной записи"
+
+#: settings.py:14
+#, python-format
+msgid ""
+"Please follow the link below to activate your account:\n"
+"%(url)s"
+msgstr ""
+"Для завершения процесса регистрации, пожалуйста, пройдите по ссылке, "
+"расположенной ниже:\n"
+"%(url)s"
+
+#: settings.py:16
+msgid "E-mail was successfully verified. You can now proceed to sign in."
+msgstr "Адрес аэлектронной почты подтверждён. Теперь можно войти на сайт."
+
 #: settings.py:17
+msgid "Unable to verify an e-mail. User account was not activated."
+msgstr ""
+"Не удалось подтвердить адрес электронной почты, учётная запись пользователя "
+"не была активирована."
+
+#: settings.py:27
 msgid "Signin enabled"
 msgstr "Авторизация разрешена"
 
-#: settings.py:18
+#: settings.py:28
 msgid "Sign in disabled text"
 msgstr "Текст при отключенной авторизации"
 
-#: settings.py:18
+#: settings.py:28
 msgid "This text is shown instead of a signin form when sign in in disabled."
 msgstr "Этот текст будет выводится вместо формы, если авторизация запрещена."
 
-#: settings.py:19
+#: settings.py:29
 msgid "Signup enabled"
 msgstr "Регистрация разрешена"
 
-#: settings.py:20
+#: settings.py:30
 msgid "Sign up disabled text"
 msgstr "Текст при отключенной регистрации"
 
-#: settings.py:20
+#: settings.py:30
 msgid "This text is shown instead of a signup form when sign up in disabled."
 msgstr "Этот текст будет выводится вместо формы, если регистрация запрещена."
+
+#: settings.py:32
+msgid "E-mail verification"
+msgstr "Подтверждение адреса электронной почты"
+
+#: settings.py:33
+msgid "Verification notice"
+msgstr "Уведомление о подтверждении"
+
+#: settings.py:33
+msgid "Text shown to a user after a registration form is submitted."
+msgstr ""
+"Текст будет показан пользователю после отправки заполненной формы "
+"регистрации."
+
+#: settings.py:35
+msgid "Message title"
+msgstr "Заголовок сообщения"
+
+#: settings.py:35
+msgid "Title of an email message containing an account activation URL."
+msgstr ""
+"Заголовок e-mail сообщения, содержащего URL для активации учётной записи "
+"пользователя."
+
+#: settings.py:36
+msgid "Message body"
+msgstr "Тело сообщения"
+
+#: settings.py:36
+#, python-format
+msgid ""
+"<b>NOTE:</b> Message body must include `%(url)s` marker to indicate a place "
+"to put an activation URL at."
+msgstr ""
+"<b>ВНИМАНИЕ:</b> Тело сообщения должно содержать маркер <b>%(url)s</b>, на "
+"место которого будет помещён URL для активации учётной записи."
+
+#: settings.py:38
+msgid "Verification success notice"
+msgstr "Подтверждение успешно"
+
+#: settings.py:38
+msgid ""
+"A message shown to a user after he has followed an account activation URL if "
+"activation was a success."
+msgstr ""
+"Сообщение будет показано пользователю, после перехода по URL для активации "
+"учётной записи  в случае отсутствия ошибок."
+
+#: settings.py:39
+msgid "Verification error notice"
+msgstr "Ошибка подтверждения"
+
+#: settings.py:39
+msgid ""
+"A message shown to a user after he has followed an account activation URL if "
+"there was an error during an activation process."
+msgstr ""
+"Сообщение будет показано пользователю, после перехода по URL для активации "
+"учётной записи в случае ошибки."
 
 #: signin_flows/modern.py:13
 msgid "Username"
 msgstr "Имя пользователя"
 
-#: signin_flows/modern.py:13 signup_flows/classic.py:62
+#: signin_flows/modern.py:13 signup_flows/classic.py:65
 msgid "Email"
 msgstr "Адрес электронной почты"
 
@@ -116,9 +230,11 @@ msgstr "Адрес электронной почты"
 msgid ""
 "There is more than one user with this e-mail. Please use your username to "
 "log in."
-msgstr "Существует несколько пользователей с таким адресом электронной почты. Пожалуйста, используйте имя пользователя."
+msgstr ""
+"Существует несколько пользователей с таким адресом электронной почты. "
+"Пожалуйста, используйте имя пользователя."
 
-#: signup_flows/classic.py:68
+#: signup_flows/classic.py:71
 msgid "Sign Up with this email domain is not allowed."
 msgstr "Регистрация для этого домена запрещена."
 
@@ -132,12 +248,14 @@ msgstr "Код приглашения недействителен."
 
 #: templates/sitegate/signin/form_as_p.html:5
 #: templates/sitegate/signin/form_bootstrap.html:20
+#: templates/sitegate/signin/form_bootstrap3.html:20
 #: templates/sitegate/signin/form_foundation.html:18
 msgid "Log in"
 msgstr "Войти"
 
 #: templates/sitegate/signup/form_as_p.html:5
 #: templates/sitegate/signup/form_bootstrap.html:20
+#: templates/sitegate/signup/form_bootstrap3.html:20
 #: templates/sitegate/signup/form_foundation.html:18
 msgid "Sign up"
 msgstr "Зарегистрироваться"
