AUTHORS is updated

--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@ Contributors
 
 Alexey Subbotin <https://github.com/dotsbb/>
 Yaroslav Klyuyev <https://github.com/imposeren/>
+David Lindsey <https://github.com/aptwebapps/>
 
 
 
