Added Czech localization.

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Translators
 
 Russian: Igor Starikov <https://www.transifex.com/accounts/profile/idlesign/>
 Polish: Alexey Subbotin <https://www.transifex.com/accounts/profile/dotsbb/>
+Czech: Viktor Matys <https://www.transifex.com/accounts/profile/grumpa/>
