--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
++ Added Czech localization.
+
+
 v0.9.0
 ------
 + Django 1.7 ready.
