--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 django-sitegate Authors
 =======================
 
-Created by Igor 'idle sign' Starikov.
+Created by Igor `idle sign` Starikov.
 
 
 Contributors
