--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,9 +2,10 @@ django-sitegate changelog
 =========================
 
 
-Unreleased
-----------
+v0.10.0
+-------
 + Added Czech localization.
++ Added Django 1.7 migrations.
 
 
 v0.9.0
