--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@ Contributors
 Alexey Subbotin <https://github.com/dotsbb/>
 Yaroslav Klyuyev <https://github.com/imposeren/>
 David Lindsey <https://github.com/aptwebapps/>
+Patrick Taylor <https://github.com/huxley/>
 
 
 
