--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
+* Django 1.10 compatibility improvements.
+
+
 v0.10.3
 -------
 * Fixed "Your models have changes that are not yet reflected in a migration" (see #19).
