--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,7 +5,7 @@ django-sitegate changelog
 Unreleased
 ----------
 + Added `repo` module with known anonymous mailer hosts.
-
+* ModernSignup: maximum e-mail length is limited to maximum username length (see #2).
 
 
 v0.11.0
