--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
+* Dropped support for Python<3.4 and Django<1.7.
+
+
 v0.12.2
 -------
 * Django 1.11 compatibility improvements.
