--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
+! Dropped QA for Python 3.4.
+
+
 v0.14.1
 -------
 * Fixed siteprefs dependency version.
