--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ django-sitegate changelog
 Unreleased
 ----------
 ! Dropped QA for Python 3.4.
+* No functional changes. Celebrating 1.0.0.
 
 
 v0.14.1
