--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
+* Fixed deprecation warnings.
+
+
 v1.2.0 [2020-05-29]
 -------------------
 ! Dropped support for Django<2.0.
