--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ django-sitegate changelog
 =========================
 
 
+Unreleased
+----------
++ Added experimental support for sign in using remote services, e.g. Yandex.
+
+
 v1.2.1 [2020-10-31]
 -------------------
 * Fixed deprecation warnings.
